--- a/pom.xml
+++ b/pom.xml
@@ -59,6 +59,21 @@
 			<version>4.13</version>
 			<scope>test</scope>
 		</dependency>
+		
+		<dependency>
+			<groupId>com.github.gilberto-torrezan</groupId>
+			<artifactId>viacep</artifactId>
+			<version>1.2.0</version>
+		</dependency>
+		
+		<!-- jMockit -->
+		<dependency>
+			<groupId>org.jmockit</groupId>
+			<artifactId>jmockit</artifactId>
+			<version>1.48</version>
+			<scope>test</scope>
+		</dependency>
+		
 	</dependencies>
 
 	<build>
@@ -95,6 +110,12 @@
 					<artifactId>maven-deploy-plugin</artifactId>
 					<version>2.8.2</version>
 				</plugin>
+				<plugin>
+	                <artifactId>maven-surefire-plugin</artifactId>
+	                <configuration>
+	                    <argLine>-javaagent:"${settings.localRepository}"/org/jmockit/1.48/jmockit-1.48.jar</argLine>
+	                </configuration>
+	            </plugin>
 			</plugins>
 		</pluginManagement>
 		<plugins>
